--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -3,6 +3,7 @@ upstream gamerstroop {
 }
 server {
   listen       80;
+  server_name www.gamerstroop.com *gamerstroop.com;
   proxy_buffers 64 16k;
   proxy_max_temp_file_size 1024m;
   proxy_connect_timeout 5s;
