--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,24 +1,35 @@
 upstream gamerstroop {
-  server app:3000;
+  server unix:/tmp/gamerstroop.sock fail_timeout=0;
 }
 server {
-  listen       80;
+  listen 80;
   server_name gamerstroop.com;
-  proxy_buffers 64 16k;
-  proxy_max_temp_file_size 1024m;
-  proxy_connect_timeout 5s;
-  proxy_send_timeout 10s;
-  proxy_read_timeout 10s;
+  root /var/www/gamerstroop/current/public;
+  index index.html index.htm;
+  client_max_body_size 10M;
   location / {
-    try_files $uri $uri/ @nginx_rails_app;
-  }
-  location @nginx_rails_app {
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
+    proxy_set_header X-FORWARDED_PROTO $scheme;
     proxy_redirect off;
-    proxy_pass http://gamerstroop;
-    # limit_req zone=one;
-    access_log /var/www/gamerstroop/log/nginx.access.log;
-    error_log /var/www/gamerstroop/log/nginx.error.log;
+    if ($request_uri ~* "\.(ico|css|js|gif|jpe?g|png)\?[0-9]+$") {
+      access_log off;
+      add_header Cache-Control public;
+      expires max;
+      break;
+    }
+    if (!-f $request_filename) {
+      proxy_pass http://gamerstroop;
+      break;
+    }
+  }
+  error_page 500 502 503 504 /500.html;
+  location = /500.html {
+    root /var/www/gamerstroop/current/public;
+  }
+  error_page 404 /404.html;
+  location = /404.html {
+    root /var/www/gamerstroop/current/public;
   }
 }
