--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,9 +1,9 @@
 upstream gamerstroop {
-  server unix:///tmp/gamerstroop.sock;
+  server app:3000;
 }
 server {
   listen       80;
-  server_name gamerstroop.com;
+  server_name gamerstroop.com 174.138.55.88 www.gamerstroop.com;
   proxy_buffers 64 16k;
   proxy_max_temp_file_size 1024m;
   proxy_connect_timeout 5s;
